fix: create index with template
